copied the index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <header id="banner">
+        <nav class="navigation">
+            <img id="guitar-logo" src="res/image/logo/LOGO GUITAR.png" alt="guitar stick">
+            <ul class="nav-items">
+                <li class="nav-item"><a href="index.html">Home </a></li>
+                <li class="nav-item"><a href="work.html" target="_blank">Work </a></li>
+                <li class="nav-item"><a href="index.html">Resume </a></li>
+                <li class="nav-item"><a href="contact.html">Contact </a></li>
+            </ul>
+        </nav>
+    </header>
+<div class="main-order-container">
+    <p class="order-text">
+        ORDER IT NOW !!!
+    </p>
+    <BUtton class="order-button">
+            Order
+    </BUtton>
+</div>
+
+    <article id="banner_1">
+        <figure class="grid-container">
+            <img class="grid-item item1" src="res/image/glry_img/guitar_1.jpg" alt="blue_guitar">
+            <img class="grid-item item2" src="res/image/glry_img/guitar_3.jpg" alt="vintage_guitar">
+            <img class="grid-item item3" src="res/image/glry_img/guitar_4.jpg" alt="clasic_electric_guitar">
+            <img class="grid-item item4" src="res/image/glry_img/guitar_5.jpg" alt="guitar_player">
+        </figure>
+        <section>
+            <p class="gtr-text">
+                The history of the guitar can be traced back thousands of years to ancient civilizations such as the
+                Babylonians, Egyptians, and Greeks, who all had their own unique versions of stringed instruments.
+                However,
+                it wasn't until the Middle Ages that the guitar as we know it today began to take shape. <br><br>
+
+                The first guitars were likely developed in Spain in the 13th century, where a four-stringed instrument
+                called the "oud" was modified and transformed into what is now known as the "guitarra latina." This
+                early
+                version of the guitar had a narrow body and a rounded back, and it was commonly used in medieval court
+                music. <br><br>
+
+                Over the next few centuries, the guitar continued to evolve, with new designs and techniques emerging in
+                Italy, France, and other parts of Europe. In the 16th century, a fifth string was added to the guitar,
+                and
+                it began to be used more widely in popular music. <br><br>
+
+                It wasn't until the 19th century, however, that the guitar really took off as a mainstream instrument.
+                This
+                was due in large part to the work of guitar makers such as Antonio de Torres Jurado, who developed the
+                modern classical guitar with a wider body, a flat back, and six strings. The guitar's popularity
+                continued
+                to grow throughout the 20th century, with the emergence of new styles such as jazz, blues, and rock
+                music.
+                <br><br>
+
+                Today, the guitar remains one of the most popular instruments in the world, with millions of people
+                playing
+                it for both professional and recreational purposes. Its rich history and diverse range of styles make it
+                a
+                truly unique and timeless musical instrument.
+            </p>
+        </section>
+
+    </article>
+
+</body>
+<footer class="footer">
+    <div class="section_1">
+        <p>
+            The purpose of a guitar company is to design, <br> manufacture, and sell high-quality guitars <br> that meet
+            the needs
+            and desires of musicians of all levels.
+        </p>
+    </div>
+    <div class="section_2">
+        <p>
+            Adress: 123 Main Street, Anytown USA. <br> Please note that this address is entirely fictitious <br> and
+            should not be
+            used for any real-world purposes. <br><br>
+            Contact: 1234567890 / 0987654321
+        </p>
+
+    </div>
+</footer>
 </body>
 </html>
